Standardized HTTP server telemetry